# mxCamera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  deploy.ps1  mxCamera_config_example.toml  mxcamera
include/: DEV_Config.h  Debug.h  mxCamera.h  usb_config.h
source/: DEV_Config.c  i2c.c  main.c  usb_config.c
